#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])

AC_INIT(minihdr, 1.0, superisaac.ke@gmail.com)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/hdr.c])
#AM_CONFIG_HEADER(config.h)
# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([gd], [gdImageGetPixel])
# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([strdup])

AC_OUTPUT([Makefile
	     src/Makefile])
